# tg-jira-bot

./: .gitignore  README.md  docker-compose.yaml  main.py  pyproject.toml
src/: config.py
src/bot/: app.py
src/bot/handlers/: create_issue.py  echo_all.py  info.py  issue_assignee.py  issue_attachments.py  issue_close.py  issue_comments.py  issue_create.py  issue_edit.py  issue_status.py  issues_my.py  issues_search.py  login.py  logout.py  my_issues.py  start.py  userlist.py
src/bot/utils/: dict.py  jira_auth.py
src/db/: dao.py  init_db.sql
src/webhook/: app.py  routers.py  utils.py
